Archive2/15/b7b1a08152c591/output
main.cpp:48:30: error: expression is not assignable
        vBig = v1, v2.size() = v1.size();
                   ~~~~~~~~~ ^
main.cpp:50:30: error: expression is not assignable
        vBig = v2, v1.size() = v2.size();
                   ~~~~~~~~~ ^
2 errors generated.
